added CluedIn.Connector.SqlServer as an example

--- a/k8s/pwsh/values.3.3.0.cluedin-platform-1.0.0.yml
+++ b/k8s/pwsh/values.3.3.0.cluedin-platform-1.0.0.yml
@@ -27,6 +27,10 @@ application:
       password: "<redacted>"
 
   cluedin:
+    components:
+      packages:
+        - name: CluedIn.Connector.SqlServer
+          version: 3.3.0-*
     nodeSelector:
       kubernetes.cluedin.com/pooltype: process
     roles:
