neo4j issue with 3.5.31 - pin to 3.5.30 for now

--- a/k8s/pwsh/values.3.3.0.cluedin-platform-1.0.0.yml
+++ b/k8s/pwsh/values.3.3.0.cluedin-platform-1.0.0.yml
@@ -155,6 +155,9 @@ infrastructure:
           storage: "4Gi"
 
   neo4j:
+    # there appears to be an issue with 3.5.31
+    # so pinning to this one 3 Mar 2022
+    imageTag: "3.5.30"
     nodeSelector:
       kubernetes.cluedin.com/pooltype: data
     resources:
