removed restrictions around creating org cluedin - and added example of disabling fuzzy entity matching

--- a/k8s/pwsh/values.3.3.0.cluedin-platform-1.0.0.yml
+++ b/k8s/pwsh/values.3.3.0.cluedin-platform-1.0.0.yml
@@ -35,6 +35,11 @@ application:
       kubernetes.cluedin.com/pooltype: process
     roles:
       main:
+        extraConfiguration:
+          # remove most restrictions around org names (e.g. "cluedin")
+          CLUEDIN_appSettings__ReservedOrganizationIds: "none"
+          # e.g. disable Fuzzy Entity Matching
+          #CLUEDIN_APPSETTINGS__CLUEPROCESSING_FUZZYENTITYMATCHING_ENABLED: "false"
         count: 1
         resources:
           limits:
@@ -155,7 +160,7 @@ infrastructure:
           storage: "4Gi"
 
   neo4j:
-    # there appears to be an issue with 3.5.31
+    # there is an issue with 3.5.31
     # so pinning to this one 3 Mar 2022
     imageTag: "3.5.30"
     nodeSelector:
