added the production vs development to the dev example

--- a/k8s/pwsh/dev-sizing/values.3.3.1.cluedin-platform-1.0.2.yml
+++ b/k8s/pwsh/dev-sizing/values.3.3.1.cluedin-platform-1.0.2.yml
@@ -24,6 +24,7 @@ application:
       name: cluedin
       email: admin@cluedin.com
       password: "<redacted>"
+  environment: "Development"    # Environment (e.g Production or Development)
 
   cluedin:
     components:
